# aws-ecs-fastapi-service

./: .config.template  .dockerignore  .env.template  .pre-commit-config.yaml  Dockerfile  README.md  docker-compose.yml  entrypoint.sh  pylintrc  pyproject.toml  requirements.txt
.github/workflows/: ci.yml
docs/: TUTORIAL_RUNNING_LOCALLY.md
scripts/: install_resources.py
src/: main.py
src/server/: app.py
src/server/core/: config.py
src/server/crud/: my_api.py  my_classifier.py  student.py
src/server/db/: mongodb_utils.py
src/server/libs/: my_classifier.py
src/server/models/: my_classifier.py
src/server/routes/: my_classifier.py  student.py
tests/: test_app.py  test_aws_ecs_fastapi_service.py
