[tool.poetry]
name = "aws-ecs-fastapi-service"
version = "0.1.0"
description = ""
authors = ["lucaskawazoi <lucas.key.kawazoi@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.7"
uvicorn = "^0.6.1"
gunicorn = "^19.9"
fastapi = "^0.29"
pydantic = {version = "^0.26.0",extras = ["email"]}
passlib = {version = "^1.7",extras = ["bcrypt"]}
pyjwt = "^1.7"
alembic = "^1.0"
python-slugify = "^3.0"
Unidecode = "^1.0"
python-dotenv = "^0.10.1"
databases = "^0.2.1"
motor = "^2.0"
pandas = "^1.1.3"

[tool.poetry.dev-dependencies]
pytest = "*"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
